using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerAnimationNameConfig
{
    public const string Motion = "Motion";
    public const string Movement = "Movement";
    public const string Horizontal = "Horizontal";
    public const string Vertical = "Vertical";
    public const string Sprint = "Sprint";
    public const string Magazine = "Magazine";
    public const string Collimation = "Collimation";
    public const string Fire = "Fire";
    public const string Reface_Start_F_R_180 = "Reface_Start_F_R_180";
    public const string Reface_Start_F_L_180 = "Reface_Start_F_L_180";




}
